--- a/HelloWorldApp/HelloWorldApp/wwwroot/index.html
+++ b/HelloWorldApp/HelloWorldApp/wwwroot/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.6d013a6c0da44134.js" type="module"></script><script src="polyfills.5cdf16dc2688a42d.js" type="module"></script><script src="main.4afc6fdd5f82dffb.js" type="module"></script></body>
+<script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script></body>
 </html>
